self_repl: More work on the nonplateau image.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -452,6 +452,14 @@ ramp functions. Let \(g = r_L + r_R\). I'll show that the shape of \(g\)
 must dominate the landscape of \(f\) in order for it to be exactly
 self-replicating.
 
+TODO work up to this image
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{images/pdfs/nonplateau.pdf}
+\caption{TODO}
+\end{figure}
+
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
 \subsubsection{\texorpdfstring{All possible positive curves for the
