self_repl: minor: caption on example exact s-r fn

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -458,6 +458,9 @@ and \(g\) are extracted from a function
 \(f\).}\label{fig:nonplux5fsetup}
 \end{figure}
 
+TODO Clean up the font used in this image (looks bad in the pdf right
+now).
+
 I'll show that the shape of \(g\) must dominate the landscape of \(f\)
 in order for it to be exactly self-replicating.
 
@@ -502,8 +505,13 @@ TODO work up to this image
 \begin{figure}[htbp]
 \centering
 \includegraphics{images/pdfs/nonplateau.pdf}
-\caption{TODO}
+\caption{\label{fig:nonplateau}An exactly self-replicating function
+\(f\) completely determined by \(r_L(x) = \cos(2x)/2 + 1/4\),
+\(r_R(x) = r_L(1 - x)\), and the value \(f(x) = r_L(0) + r_R(0)\) for
+all \(x\) not determined by \(r_L\) and \(r_R\).}\label{fig:nonplateau}
 \end{figure}
+
+TODO Clarify the values of \(s\), \(t_1\), and \(t_2\) in that caption.
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
