enum_comb: add a note about the errata

--- a/book_notes/enumerative_combinatorics/enum_comb.tex
+++ b/book_notes/enumerative_combinatorics/enum_comb.tex
@@ -89,6 +89,12 @@ These are somewhat informal notes I'm taking as I read through the book
 \emph{Enumerative Combinatorics, Volume 1} by Richard P. Stanley
 (Stanley 1997).
 
+If you're also reading this book, I recommend looking at the errata for
+the chapter you're reading. The errata are at the back of the book ---
+on page 319 in my edition. I've marked the corrections in pencil in my
+book to avoiding having to scratch my head and rework through any
+already-known bugs.
+
 \section{Notes on chapter 1}\label{notes-on-chapter-1}
 
 On page 19, we find the following proposition, which I quote directly:
