--- a/book_notes/enumerative_combinatorics/enum_comb.tex
+++ b/book_notes/enumerative_combinatorics/enum_comb.tex
@@ -347,7 +347,44 @@ excedences of \(\pi_a\) while those below are excedences of
 \(\pi_b\).}\label{fig:excedence}
 \end{figure}
 
-TODO rest of notes from my voice memo
+After that is the claim that \(d(\pi) + d(\dot\pi) = n - 1\), where
+\(\dot\pi\) is the reversal of \(\pi\). This follows from the fact that
+there are a total of \(n - 1\) possible descent positions, and from the
+fact that \(a_i, a_{i+1}\) is a descent in \(\pi\) iff
+\(a_{n-i}, a_{n-i+1}\) is \emph{not} a descent in \(\dot\pi\).
+
+TK Check the following paragraph.
+
+When reading that previous claim, I had originally interpreted \(\pi\)
+as still being specified in the cycle notation
+
+\[\pi = (a_1 a_2 \ldots a_{i_1}) \,
+        (a_{i_1+1} a_{i_1+2} \ldots a_{i_2}) \, \cdots \,
+        (a_{i_{k-1}+1} \ldots a_n).\]
+
+I no longer think this is what the author had in mind --- but under that
+interpretation there arises the question: does \(d(\pi) = d(\hat\pi)\)?
+I would not expect this to be true, and it is indeed false. But
+curiously it is true for most of the small test cases I tried on it. The
+smallest counterexample I could find is the pair
+
+\[\begin{array}{rcccl}
+    \pi & = & (321) & = & 312, \\
+\hat\pi & = & 321. \\
+\end{array}\]
+
+Then, \(d(\pi) = 1\) while \(d(\hat\pi) = 2\).
+
+TK Check from here going down against the book.
+
+Now we're ready to justify the proposition itself.
+
+\textbf{Proposition 1.3.12} TK fill this out
+
+TK TODO rest of notes from my voice memo; I'm at about 5:20.
+
+\(n - d(\hat\pi)\) = number of i with suppose we have k + 1 weak
+excedences in pi number of descents of \(\hat\pi\) is
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
