--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -364,8 +364,8 @@ function.}\label{fig:otherux5framps}
 
 The ramp functions \(K_{a,b,c,d}\) all have the constant value 1 on the
 middle interval \([b, c]\). This requires the ramps on intervals
-\([a, b]\) and \([c, d]\) sum to 1. In this section, I'll consider what
-can happen if we relax this condition. I'll informally call these
+\([a, b]\) and \([c, d]\) to sum to 1. In this section, I'll consider
+what can happen if we relax this condition. I'll informally call these
 \emph{non-plateau functions}.
 
 It will be useful to propose one possible formalization of a
@@ -413,9 +413,9 @@ In this case, \(f(x) = f_L(x) = K_{0,1,2,3}\) and
 
 \[t_1(x) =
 \begin{cases}
-  x           &   \text{if } x \le 1,                  \\
-  (x - 1)/3   &   \text{if } x \in [1,4], \text{ and}  \\
-  x-3         &   \text{otherwise.}                    \\
+  x              &   \text{if } x \le 1,                  \\
+  (x - 1)/3 + 1  &   \text{if } x \in [1,4], \text{ and}  \\
+  x - 2          &   \text{otherwise.}                    \\
 \end{cases}\]
 
 To summarize, \(s(x) = x - 2\), \(t_1(x)\) is defined immediately above,
@@ -439,7 +439,7 @@ general version of the category of functions we've explored so far.
 For convenience, I'll introduce a notation to extract a new function
 with domain \([0, 1]\) from any closed domain interval of an original
 function \(f\). Specifically, let \(f \restrict [a, b]\) denote the
-function mapping \([0,1]\to\mathbb{R}\) where
+function with domain \([0,1]\) where
 
 \[
 \big(f \restrict [a,b]\big)(x) = f(a + (b-a)x).
@@ -458,22 +458,26 @@ and \(g\) are extracted from a function
 \(f\).}\label{fig:nonplux5fsetup}
 \end{figure}
 
-TODO Clean up the font used in this image (looks bad in the pdf right
-now).
-
 I'll show that the shape of \(g\) must dominate the landscape of \(f\)
 in order for it to be exactly self-replicating.
 
-Now suppose that \(f\) is exactly self-replicating. I'll use definition
+Now suppose that \(f\), in addition to having \(f(x)=0\) outside of
+\([0,3]\), is also exactly self-replicating. I'll use definition
 (\ref{eq:exact_defn}) to provide functions \(f_L\), \(f_R\), and \(f_S\)
-in terms of \(f\), \(s\), \(t_1\), and \(t_2\). Notice that
+in terms of \(f\), \(s\), \(t_1\), and \(t_2.\) Notice that
 
 \[\big(f_S \restrict [2,3]\big) = \big(f_L + f_R \restrict [2, 3]\big) =
 r_L + r_R = g.\]
 
 Since \(f_L(x) = f_S(t_1(x))\), and \(t_1\) maps \([2,3]\) to
 \([1\tfrac{1}{3}, 1\tfrac{2}{3}]\), this means
-\((\,f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\).
+\((\,f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\). Below, I'll
+show how repeated application of this kind of logic determines the
+non-ramp values of \(f\) almost everywhere; a boolean property
+\(P:\mathbb{R}\to\{\text{true},\text{false}\}\) is defined to be true
+\href{https://en.wikipedia.org/wiki/Almost_everywhere}{\emph{almost
+everywhere}} when the set \(\{x : P(x) = \text{false}\}\) has measure
+zero.
 
 \newcommand{\zerotwo}{\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
 {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
@@ -494,11 +498,16 @@ denotes the union of intervals \([0.101_3, 0.102_3]\) and
 
 Now, instead of writing
 \((\,f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\), I can write
-\((\,f_L \restrict 1 + 0.1\overline{*}_3) = g\). This means that
-\((\,f_R \restrict 3 + 0.1\overline{*}_3) = g\), so that
-\((\,f_S \restrict \{1,3\} + 0.1\overline{*}_3) = g\). As above, use the
-map \(t_1\) to conclude that
-\((\,f_L \restrict 0.\zerotwo 1\overline{*}_3) = g\).
+
+\begin{equation}\big(\,f_L \restrict 1 + 0.1\overline{*}_3\big) = g.\label{eq:nonpl_base_case}\end{equation}
+
+It's possible to generalize this last equation so that it defines
+\(f_L\) almost everywhere on the interval \([1, 2]\).
+
+\textbf{Theorem} \emph{For any \(k\ge 0\),
+\[\big(\,f_L \restrict 1 + 0.\zerotwo^k1\overline{*}_3\big)=g.\]}
+
+TODO Explore using latex-like environments for theorems.
 
 TODO work up to this image
 
@@ -514,6 +523,11 @@ all \(x\) not determined by \(r_L\) and \(r_R\).}\label{fig:nonplateau}
 TODO Clarify the values of \(s\), \(t_1\), and \(t_2\) in that caption.
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+This means that \((\,f_R \restrict 3 + 0.1\overline{*}_3) = g\), so that
+\((\,f_S \restrict \{1,3\} + 0.1\overline{*}_3) = g\). As above, use the
+map \(t_1\) to conclude that
+\((\,f_L \restrict 0.\zerotwo 1\overline{*}_3) = g\).
 
 \subsubsection{\texorpdfstring{All possible positive curves for the
 example \(s,t_1,t_2\)
