--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -471,7 +471,7 @@ r_L + r_R = g.\]
 
 Since \(f_L(x) = f_S(t_1(x))\), and \(t_1\) maps \([2,3]\) to
 \([1\tfrac{1}{3}, 1\tfrac{2}{3}]\), this means
-\((\,f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\). Below, I'll
+\((\,f=f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\). Below, I'll
 show how repeated application of this kind of logic determines the
 non-ramp values of \(f\) almost everywhere; a boolean property
 \(P:\mathbb{R}\to\{\text{true},\text{false}\}\) is defined to be true
@@ -479,35 +479,56 @@ non-ramp values of \(f\) almost everywhere; a boolean property
 everywhere}} when the set \(\{x : P(x) = \text{false}\}\) has measure
 zero.
 
-\newcommand{\zerotwo}{\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
+\newcommand{\zerotwo}{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
 {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
-{\raise0pt\hbox{$\smash{\scriptstyle 2}$}}$}}
+{\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}
 
-%\newcommand{\zerotwo}{{\lower1em\hbox{$\smash{0}$}\atop\hbox{$\smash{2}$}}}
+\newcommand{\lstar}{\overline{*}_3}
 
 At this point it will be useful to begin using base-3 notation for the
 intervals at hand. If \(s\) is a finite string with digits from the set
-\(\{0, 1, 2\}\), then let \(0.s\overline{*}_3\) denote the closure of
-the set of points whose base-3 expansion begins with \(0.s\). For
-example, \(0.11\overline{*}_3\) denotes the interval
-\([0.11_3, 0.12_3]\) while \(0.012\overline{*}_3\) denotes the interval
-\([0.12_3, 0.20_3]\). I'll also use \(\zerotwo\) to denote a digit that
-may be either a 0 or a 2; for example, \(0.1\zerotwo 1\overline{*}_3\)
-denotes the union of intervals \([0.101_3, 0.102_3]\) and
-\([0.121_3, 0.122_3]\).
+\(\{0, 1, 2\}\), then let \(0.s\lstar\) denote the closure of the set of
+points whose base-3 expansion begins with \(0.s\). For example,
+\(0.11\lstar\) denotes the interval \([0.11_3, 0.12_3]\) while
+\(0.012\lstar\) denotes the interval \([0.12_3, 0.20_3]\). I'll also use
+\(\zerotwo\) to denote a digit that may be either a 0 or a 2; for
+example, \(0.1\zerotwo 1\lstar\) denotes the union of intervals
+\([0.101_3, 0.102_3]\) and \([0.121_3, 0.122_3]\).
 
 Now, instead of writing
-\((\,f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\), I can write
+\((\,f \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\), I can write
 
-\begin{equation}\big(\,f_L \restrict 1 + 0.1\overline{*}_3\big) = g.\label{eq:nonpl_base_case}\end{equation}
+\begin{equation}\big(\,f \restrict 1 + 0.1\lstar\big) = g.\label{eq:nonpl_base_case}\end{equation}
 
-It's possible to generalize this last equation so that it defines
-\(f_L\) almost everywhere on the interval \([1, 2]\).
+It's possible to generalize this last equation so that it defines \(f\)
+almost everywhere on the interval \([1, 2]\).
 
-\textbf{Theorem} \emph{For any \(k\ge 0\),
-\[\big(\,f_L \restrict 1 + 0.\zerotwo^k1\overline{*}_3\big)=g.\]}
+\textbf{Theorem 1} \(\;\) \emph{For any \(k\ge 0\),
+\[\big(\,f \restrict 1 + 0.\zerotwo^k1\lstar\big)=g.\]}
 
-TODO Explore using latex-like environments for theorems.
+\textbf{Proof} \(\;\) The proof is by induction on \(k\). Equation
+(\ref{eq:nonpl_base_case}) provides the base case.
+
+For the inductive step, suppose
+
+\[\big(f=f_L \restrict 1 + 0.\zerotwo^k1\lstar \big) = g.\]
+
+Then
+
+\[\big(f_R \restrict 3 + 0.\zerotwo^k1\lstar \big) = g,\]
+
+so that
+
+\[\big(f_S \restrict \{1,3\} + 0.\zerotwo^k1\lstar \big) = g.\]
+
+Applying \(t_1\) to derive \(f=f_L\) back from \(f_S\), we can see that
+
+\[\big(f \restrict 1 + 0.\zerotwo^{k+1}1\lstar \big) = g.\]
+
+\hfill\(\Box\)
+
+TODO the image for the above proof, and why it is almost everywhere;
+then the remaining cases and relation to Cantor dust.
 
 TODO work up to this image
 
@@ -524,10 +545,9 @@ TODO Clarify the values of \(s\), \(t_1\), and \(t_2\) in that caption.
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
-This means that \((\,f_R \restrict 3 + 0.1\overline{*}_3) = g\), so that
-\((\,f_S \restrict \{1,3\} + 0.1\overline{*}_3) = g\). As above, use the
-map \(t_1\) to conclude that
-\((\,f_L \restrict 0.\zerotwo 1\overline{*}_3) = g\).
+This means that \((\,f_R \restrict 3 + 0.1\lstar) = g\), so that
+\((\,f_S \restrict \{1,3\} + 0.1\lstar) = g\). As above, use the map
+\(t_1\) to conclude that \((\,f_L \restrict 0.\zerotwo 1\lstar) = g\).
 
 \subsubsection{\texorpdfstring{All possible positive curves for the
 example \(s,t_1,t_2\)
