self_repl: Tweaks around stmt/pf of thm 1.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -461,8 +461,8 @@ and \(g\) are extracted from a function
 I'll show that the shape of \(g\) must dominate the landscape of \(f\)
 in order for it to be exactly self-replicating.
 
-Now suppose that \(f\), in addition to having \(f(x)=0\) outside of
-\([0,3]\), is also exactly self-replicating. I'll use definition
+Now suppose that, in addition to having \(f(x)=0\) outside of \([0,3]\),
+\(f\) is also exactly self-replicating. I'll use definition
 (\ref{eq:exact_defn}) to provide functions \(f_L\), \(f_R\), and \(f_S\)
 in terms of \(f\), \(s\), \(t_1\), and \(t_2.\) Notice that
 
@@ -502,6 +502,11 @@ Now, instead of writing
 
 It's possible to generalize this last equation so that it defines \(f\)
 almost everywhere on the interval \([1, 2]\).
+
+Recall that the notation \(1 + 0.\zerotwo^k1\lstar\) indicates a union
+of closed intervals. In the next theorem, the notation
+\((\,f \restrict \cup_i [a_i,b_i]) = g\) indicates that, for every \(i\)
+in the union, \((\,f \restrict [a_i,b_i]) = g\).
 
 \textbf{Theorem 1} \(\;\) \emph{For any \(k\ge 0\),
 \[\big(\,f \restrict 1 + 0.\zerotwo^k1\lstar\big)=g.\]}
