self_repl: work on nonplateau process img.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -532,6 +532,12 @@ Applying \(t_1\) to derive \(f=f_L\) back from \(f_S\), we can see that
 
 \hfill\(\Box\)
 
+\begin{figure}[htbp]
+\centering
+\includegraphics{images/pdfs/nonpl_process.pdf}
+\caption{TODO}
+\end{figure}
+
 TODO the image for the above proof, and why it is almost everywhere;
 then the remaining cases and relation to Cantor dust.
 
