self_repl: improve nonplateau process image.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -535,7 +535,11 @@ Applying \(t_1\) to derive \(f=f_L\) back from \(f_S\), we can see that
 \begin{figure}[htbp]
 \centering
 \includegraphics{images/pdfs/nonpl_process.pdf}
-\caption{TODO}
+\caption{\label{fig:nonpl_process}The inductive process in the proof of
+theorem 1. The top line is the domain \([0,5]\) of \(\,f_S\); the line
+below that is the domain \([0,3]\) of \(\,f\); then the subsets of
+\([1,2]\) on which \(f\) is described as the induction
+proceeds.}\label{fig:nonplux5fprocess}
 \end{figure}
 
 TODO the image for the above proof, and why it is almost everywhere;
