--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -84,6 +84,8 @@
 \begin{document}
 \maketitle
 
+\newcommand{\R}{\mathbb{R}}
+
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
 are the same up to symmetry, and both \(g_1\) and \(g_2\) strongly
@@ -344,8 +346,8 @@ self-replicating functions that are highly discontinuous, such as by
 setting \(f(x)\) to be the indicator function of a set with many border
 elements. Even among continuous functions, we can produce
 self-replicating functions which avoid being ``mostly monotonic.'' In
-particular, I'll say that a function \(f:\mathbb{R}\to\mathbb{R}\) is
-\emph{peak monotonic} iff there is a point \(x\) such that
+particular, I'll say that a function \(f:\R\to\R\) is \emph{peak
+monotonic} iff there is a point \(x\) such that
 \(a < b < x \Rightarrow f(a) \le f(b)\) and
 \(x < c < d \Rightarrow f(c) \ge f(d)\). The indicator function of an
 interval and the ramp function are both peak monotonic, while the
@@ -448,8 +450,8 @@ function with domain \([0,1]\) where
 \big(f \restrict [a,b]\big)(x) = f(a + (b-a)x).
 \]
 
-Let \(f:\mathbb{R}\to\mathbb{R}\) be any function such that \(f(x)=0\)
-outside of \([0, 3]\). Define \(r_L = f\restrict [0, 1]\) and
+Let \(f:\R\to\R\) be any function such that \(f(x)=0\) outside of
+\([0, 3]\). Define \(r_L = f\restrict [0, 1]\) and
 \(r_R = f\restrict [2,3]\); conceptually, these are the left and right
 ramp functions. Let \(g = r_L + r_R\).
 
@@ -477,7 +479,7 @@ Since \(f_L(x) = f_S(t_1(x))\), and \(t_1\) maps \([2,3]\) to
 \((\,f=f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\). Below, I'll
 show how repeated application of this kind of logic determines the
 non-ramp values of \(f\) almost everywhere; a boolean property
-\(P:\mathbb{R}\to\{\text{true},\text{false}\}\) is defined to be true
+\(P:\R\to\{\text{true},\text{false}\}\) is defined to be true
 \href{https://en.wikipedia.org/wiki/Almost_everywhere}{\emph{almost
 everywhere}} when the set \(\{x : P(x) = \text{false}\}\) has measure
 zero.
@@ -637,6 +639,11 @@ By (\ref{eq:thm2_pf}), \(E'=F'\). By repeated application of
 \[f(x) = f(1.E'_3) = f(1.F'_3) = f(y).\]
 
 \hfill\(\Box\)
+
+Although I haven't proven it yet, it turns out that theorems 1 and 2
+capture \emph{all} of the restrictions needed for \(f\) to be exactly
+self-replicating. We can capture this by working with three arbitrary
+functions: \(r_L : [0,1] \to \R\)
 
 TODO HERE Continue this reasoning in the other direction and summarize
 the aforementioned results (whatever are appropriate in a single theorem
