self_repl: define eqnset, start theorem 3.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -85,6 +85,7 @@
 \maketitle
 
 \newcommand{\R}{\mathbb{R}}
+\newcommand{\eqnset}[1]{\left.\mbox{$#1$}\quad\quad\right\rbrace}
 
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
@@ -389,12 +390,16 @@ Call a function \(f\) \emph{exactly self-replicating} iff there exist
 continuous bijections \(s\), \(t_1\), and \(t_2\) such that \(s\) is not
 the identity function and
 
-\begin{equation}\begin{array}{rcl}
+\begin{equation}\eqnset{\begin{array}{rcl}
   f_L(x) & = & f(x), \\
   f_R(x) & = & f(s(x)), \\
   f_S(x) & = & f_L(x) + f_R(x), \text{and} \\
   f_L(x) & = & t_2(f_S(t_1(x))).
-\end{array}\label{eq:exact_defn}\end{equation}
+\end{array}}\label{eq:exact_defn}\end{equation}
+
+TODO NEXT From here down, add references to this eqn number as well as
+to \ref{eq:s_t1_t2} in order to help clarify the text. This is a step
+toward theorem 3.
 
 The \emph{L}, \emph{R}, and \emph{S} subscripts are meant to hint that
 these functions act as the \emph{left} addend, \emph{right} addend, and
@@ -410,18 +415,19 @@ as \(K-\)functions, all adhere to the general form
 \[K_{0,1,2,3} + K_{2,3,4,5} = K_{0,1,4,5}.\]
 
 In this case, \(f(x) = f_L(x) = K_{0,1,2,3}\) and
-\(f_R(x) = K_{2,3,4,5} = f(x-2)\) so that \(s(x) = x - 2\). The equation
-\(f_L(x) = f_S(t_1(x))\) is satisfied by defining
+\(f_R(x) = K_{2,3,4,5} = f(x-2)\). We can satisfy all of the equations
+of (\ref{eq:exact_defn}) by using these functions:
 
-\[t_1(x) =
+\begin{equation}\eqnset{\begin{array}{rcl}
+t_1(x) & = &
 \begin{cases}
-  x              &   \text{if } x \le 1,                  \\
-  3x - 2         &   \text{if } x \in (1,2), \text{ and}  \\
-  x + 2          &   \text{otherwise.}                    \\
-\end{cases}\]
-
-To summarize, \(s(x) = x - 2\), \(t_1(x)\) is defined immediately above,
-and \(t_2(x) = x\).
+  x              &   \text{if } x \le 1,       \\
+  3x - 2         &   \text{if } x \in (1,2),   \\
+  x + 2          &   \text{otherwise;}         \\
+\end{cases}\\
+t_2(x) & = & x; \text{ and} \\
+s(x)   & = & x - 2. \\
+\end{array}}\label{eq:s_t1_t2}\end{equation}
 
 This is a simple yet foundational case --- it may be interesting to see
 which other functions are exactly self-replicating with these
@@ -570,10 +576,11 @@ this question next.
 
 Given \(x\in (1,2)\), there is some \(k\) with \(x\in G_k\) iff the
 base-3 expansion of \(x\) contains a 1 or if it ends with the tail
-\(\overline{0}\). This can be written somewhat informally as
+\(\overline{0}\). This can be expressed as:
 
-\[x\in (1,2) - G \quad\Leftrightarrow\quad x \in 1.\zerotwo^\infty_3 -\,
-\bigcup_{k\ge 0} 1.\zerotwo^k\overline{0}_3.\]
+\[\text{For } x\in (1,2), \quad
+  x\not\in G \;\;\Leftrightarrow\;\; x \in 1.\zerotwo^\infty_3 -\,
+  \bigcup_{k\ge 0} 1.\zerotwo^k\overline{0}_3.\]
 
 From here on, I'll more formally use the word \emph{expansion} --- based
 on the idea of the base-3 expansion of a number in \([0,1]\) --- to
@@ -639,13 +646,19 @@ By (\ref{eq:thm2_pf}), \(E'=F'\). By repeated application of
 
 \hfill\(\Box\)
 
-Although I haven't proven it yet, it turns out that theorems 1 and 2
-capture \emph{all} of the restrictions needed for \(f\) to be exactly
-self-replicating. We can see this by working with three functions:
-\(r_L : [0,1] \to \R\), \(r_R : [0,1] \to \R\), and
-\(h : (1,2) - G \to \R\); with the restriction that
-\(\tail(x) = \tail(y) \Rightarrow h(x) = h(y)\). Theorem 1 allows us to
-build a function \(f:[0,3]\to\R\) based on \(r_L,\) \(r_R,\) and \(h.\)
+It turns out that theorems 1 and 2 capture \emph{all} of the
+restrictions needed for \(f\) to be exactly self-replicating. This idea
+is captured by the next theorem.
+
+\textbf{Theorem 3} \(\;\) \emph{Suppose that \(f:\R\to\R\) obeys}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
+We can see this by working with three functions: \(r_L : [0,1] \to \R\),
+\(r_R : [0,1] \to \R\), and \(h : (1,2) - G \to \R\); with the
+restriction that \(\tail(x) = \tail(y) \Rightarrow h(x) = h(y)\).
+Theorem 1 allows us to build a function \(f:[0,3]\to\R\) based on
+\(r_L,\) \(r_R,\) and \(h.\)
 
 TODO HERE Continue this reasoning in the other direction and summarize
 the aforementioned results (whatever are appropriate in a single theorem
