--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -670,9 +670,21 @@ By (\ref{eq:thm2_pf}), \(E'=F'\). By repeated application of
 
 It turns out that theorems 1 and 2 capture \emph{all} of the
 restrictions needed for \(f\) to be exactly self-replicating. This idea
-is captured by the next theorem.
+is formalized by the next theorem.
 
-\textbf{Theorem 3} \(\;\) \emph{Suppose that \(f:\R\to\R\) obeys}
+\textbf{Theorem 3} \(\;\) \emph{Suppose that \(f:\R\to\R\) has the value
+0 outside the domain \([0, 3]\). Also suppose we're working in the
+context of the functions \(s,\) \(t_1,\) and \(t_2\) as defined in
+(\ref{eq:s_t1_t2}), and that the function \(g\) is defined as in
+(\ref{eq:rL_rR_g}). Then \(f\) is exactly self-replicating iff}
+
+\[\begin{array}{lcll}
+f(1.\zerotwo E_3) & = & f(1.E_3) & \text{for } E\ne\overline 0,\overline 2;
+  \quad\text{and} \\
+f(1.1E_3)         & = & g(0.E_3) & \text{for any }E. \\
+\end{array}\]
+
+\textbf{Proof} \(\;\) TODO
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
