self_repl: Start proof of theorem 3.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -673,7 +673,7 @@ restrictions needed for \(f\) to be exactly self-replicating. This idea
 is formalized by the next theorem.
 
 \textbf{Theorem 3} \(\;\) \emph{Suppose that \(f:\R\to\R\) has the value
-0 outside the domain \([0, 3]\). Also suppose we're working in the
+0 outside the domain \([0, 3].\) Also suppose we're working in the
 context of the functions \(s,\) \(t_1,\) and \(t_2\) as defined in
 (\ref{eq:s_t1_t2}), and that the function \(g\) is defined as in
 (\ref{eq:rL_rR_g}). Then \(f\) is exactly self-replicating iff}
@@ -684,7 +684,11 @@ f(1.\zerotwo E_3) & = & f(1.E_3) & \text{for } E\ne\overline 0,\overline 2;
 f(1.1E_3)         & = & g(0.E_3) & \text{for any }E. \\
 \end{array}\]
 
-\textbf{Proof} \(\;\) TODO
+\textbf{Proof} \(\;\) The forward direction has already been justified
+by (\ref{eq:nonpl_base_case}) and (\ref{eq:h_reln}). Note that these two
+equations are each expanded upon in theorems 1 and 2.
+
+TODO
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
