--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -81,6 +81,12 @@
 \author{Tyler Neylon}
 \date{204.2016}
 
+% Begin custom, non-pandoc commands.
+
+\newcommand{\latexonlyrule}{\rule}
+
+% End custom, non-pandoc commands.
+
 \begin{document}
 \maketitle
 
@@ -681,7 +687,7 @@ context of the functions \(s,\) \(t_1,\) and \(t_2\) as defined in
 \[\begin{array}{lcll}
 f(1.\zerotwo E_3) & = & f(1.E_3) & \text{for } E\ne\overline 0,\overline 2;
   \quad\text{and} \\
-f(1.1E_3)         & = & g(0.E_3) & \text{for any }E. \\
+f(1.1E_3)         & = & g(0.E_3) & \text{for any }E. \latexonlyrule{0pt}{14pt} \\
 \end{array}\]
 
 \textbf{Proof} \(\;\) The forward direction has already been justified
